Add C3 splashkit functions video

--- a/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/4-constants.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/4-constants.mdx
@@ -3,10 +3,15 @@ title: Constants
 ---
 import { YouTube } from 'astro-embed';
 
-See how to create constants, and how to use them in your code.
+<div class="not-content">
+  <YouTube id="nIpEptU3swA" params="fs=1&modestbranding=1&rel=0"/>
+</div>
+
+Constants are like variables, but you can not change their value.
+This is useful for associating a value with meaningful name.
 
 Watch this video to:
 
-- Create and use constants
+- Get started creating and using constants.
 
-Next we look at functions, and using these to calculate values.
+After this video you should be able to create constants in your code, and understand when to use a constant over a variable.
