Minor update to event loop

--- a/src/content/docs/book/part-1-instructions/3-control-flow/3-guided-tour/1-1-event-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/3-guided-tour/1-1-event-loop.mdx
@@ -123,6 +123,6 @@ Create a `PLAYER_SPEED` constant with the value 3. Add this to the `player_x` va
     </AccordionItem>
 </Accordion>
 
-Compile and run the program. What happens? Can you update the code to move the player in the other direction.
+Compile and run the program. What happens?
 
-Have a go at adding the code to move the player vertically as well. This will need a `player_y` variable.
+Update the code to move the player in the other direction. Have a go at adding the code to move the player vertically as well. This will need a `player_y` variable.
