Deep dive memory guided tour progress

--- a/src/content/docs/book/part-2-organised-code/7-deep-dive-memory/3-guided-tour/01-using-malloc.mdx
+++ b/src/content/docs/book/part-2-organised-code/7-deep-dive-memory/3-guided-tour/01-using-malloc.mdx
@@ -3,7 +3,7 @@ title: "Using Malloc"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
-In this tour we will explore the use of `malloc` to create an array of double's in memory. We are focusing on the basics of using `malloc` and `free` here, and how these can be used to allocate space in memory. The program we create will be very simple, just creating an array of a variable size, populate it with double values, and then print these values out. In the [advanced tour](/book/part-2-organised-code/7-deep-dive-memory/3-guided-tour/0-overview) we will look at making this into a more usable utility, so focus on the mechanics here.
+In this tour we will explore the use of `malloc` to create an array of double's in memory. We are focusing on the basics of using `malloc` and `free` here, and how these can be used to allocate space in memory. The program we create will be very simple, just creating an array of a variable size, populate it with double values, and then print these values out. In the [dynamic array tour](/book/part-2-organised-code/7-deep-dive-memory/3-guided-tour/02-0-dynamic-array) we will look at making this into a more usable utility, so focus on the mechanics here.
 
 ## Create your project
 
