--- a/src/content/docs/book/part-2-organised-code/7-deep-dive-memory/3-guided-tour/3a-stats.mdx
+++ b/src/content/docs/book/part-2-organised-code/7-deep-dive-memory/3-guided-tour/3a-stats.mdx
@@ -5,7 +5,7 @@ sidebar:
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
-Now that our dynamic array looks and feels more like an array, we should be able to use it with ease across our other programs.
+Now that our dynamic array is reasonably well featured, we should be able to use it with ease across our other programs.
 
 In the [Working with Multiples](/book/part-2-organised-code/3-working-with-multiples/0-overview) chapter, we built a [stats calculator](/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-01-stats-design) using an array embedded within a struct. This program can easily be rebuilt now to incorporate the dynamic array you have created.
 
