--- a/src/content/docs/book/part-1-instructions/2-data/4-activities/1-group-activity.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/4-activities/1-group-activity.mdx
@@ -2,11 +2,31 @@
 title: Group Activity
 ---
 import { Steps } from '@astrojs/starlight/components';
+import { Accordion, AccordionItem } from 'accessible-astro-components'
+
+## Concept Exploration
+
+<Steps>
+1. As a group, grab a whiteboard and the see if you can come up with a concept map related to the concepts covered in this topic. 
+
+    <Accordion>
+        <AccordionItem header="Need some hints?">
+        Make sure you cover at least the following concepts:
+            - Variable
+            - Constant
+            - Type
+            - Identifier
+            - Assignment Statement
+            - Expression
+        </AccordionItem>
+    </Accordion>
+
+</Steps>
 
 ## Paired Review
 
 <Steps>
-1. In a pair, review the following code.
+2. In a pair, review the following code.
 
    ```c++
    #include "splashkit.h"
