--- a/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/4-music.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/4-music.mdx
@@ -41,7 +41,7 @@ Loading /c/Users/andrew/Downloads/test.ogg failed!
 4: Quit
 Option: 3
 
-No music is playing playing
+No music is playing
 
 1: Load song
 2: Play song
