Tidy up structuring code

--- a/src/content/docs/book/appendix/2-computer-use/0-panorama/02-shell-commands.mdx
+++ b/src/content/docs/book/appendix/2-computer-use/0-panorama/02-shell-commands.mdx
@@ -72,16 +72,10 @@ mkdir Project1
 # cd command to move into this folder
 cd Project1
 
-# dotnet program with 2 arguments: new and console
-dotnet new console
-
-# dotnet program with 3 arguments: add, package, and splashkit
-dotnet add package splashkit
-
 # clang++ program with 5 arguments: test.cpp, -o, test, -l, SplashKit
 # -o and test are linked (test is the value for the -o option)
 # -l and splashkit are linked (splashkit is the value for this -l)
-clang++ test.cpp -o test -l SplashKit
+clang++ test.cpp -o test -l SplashKit  -Wall
 ```
 
 </TabItem>
@@ -109,16 +103,10 @@ mkdir Project1
 # cd command to move into this folder
 cd Project1
 
-# dotnet program with 2 arguments: new and console
-dotnet new console
-
-# dotnet program with 3 arguments: add, package, and splashkit
-dotnet add package splashkit
-
 # clang++ program with 5 arguments: test.cpp, -o, test, -l, SplashKit
 # -o and test are linked (test is the value for the -o option)
 # -l and splashkit are linked (splashkit is the value for this -l)
-clang++ test.cpp -o test -l SplashKit
+clang++ test.cpp -o test -l SplashKit -Wall
 ```
 
 </TabItem>
@@ -145,12 +133,6 @@ mkdir Project1
 
 # cd command to move into this folder
 cd Project1
-
-# dotnet program with 2 arguments: new and console
-dotnet new console
-
-# dotnet program with 3 arguments: add, package, and splashkit
-dotnet add package splashkit
 
 # clang++ program with 5 arguments: test.cpp, -o, test, -l, SplashKit
 # -o and test are linked (test is the value for the -o option)
@@ -182,12 +164,6 @@ mkdir Project1
 
 # cd command to move into this folder
 cd Project1
-
-# dotnet program with 2 arguments: new and console
-dotnet new console
-
-# dotnet program with 3 arguments: add, package, and splashkit
-dotnet add package splashkit
 
 # clang++ program with 5 arguments: test.cpp, -o, test, -l, SplashKit
 # -o and test are linked (test is the value for the -o option)
