--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/5-reference/03-procedure-parameters.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/5-reference/03-procedure-parameters.mdx
@@ -156,6 +156,8 @@ Parameters are an optional addition to any procedure declaration -- in between t
 Each variable is a single parameter.
 :::
 
+![Annotated code for a parameter](./images/param-pano.png)
+
 ## Examples
 
 ### Procedures with parameters
