--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/5-reference/04-function-decl.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/5-reference/04-function-decl.mdx
@@ -43,6 +43,8 @@ There are only two differences:
 In C++, a function without a return statement results in [undefined behaviour](https://en.wikipedia.org/wiki/Undefined_behavior). This means that there is no standard for how the scenario will be handled. Your compiler by default will not warn you when your program has undefined behaviour.
 :::
 
+![Annotated code of a function](./images/function-pano.png)
+
 ### Procedures as void functions
 
 C/C++ does not have a strong distinction between functions and procedures. Technically, in C/C++ a procedure is just a function that returns a special `void` type. However, although there isn't really a difference in syntax between functions and procedures, it is still important to understand the conceptual difference between them.
@@ -144,10 +146,3 @@ variables.
 - It is **good practice** to use parameters to pass values into a function or procedure.
 
 :::
-
-
-:::note[Summary]
-
-
-:::
-
