--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/5-reference/02-procedures.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/5-reference/02-procedures.mdx
@@ -31,9 +31,7 @@ A **procedure declaration** starts with `void`. This indicates to the compiler t
 The **procedure name** can be any valid [identifier](/book/part-1-instructions/1-sequence/5-reference/16-identifier) that has not been used before in the same scope.
 The empty parenthesis must appear after the procedure’s name, and before the *block* which contains the statements that define the procedure's logic.
 
-:::note
-In C/C++, `void` is a data type used to indicate the absence of return data.
-:::
+![Annotated sample code showing a procedure declaration](./images/procedure-pano.png "Procedures")
 
 ## Example
 
@@ -83,8 +81,6 @@ int main()
     find_what_to_cook();
     get_ingredients();
     // etc...
-
-    return 0;
 }
 ```
 </CodeScroll>
