Tidy structured data

--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/4-activities/3-2-targets.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/4-activities/3-2-targets.mdx
@@ -38,15 +38,12 @@ Click 10 targets to end the game.
 // end after the player has hit the required number of targets
 ```
 
-:::tip[Hints:]
-
 Make sure you have at least the following functions and procedures:
 
 - `target_hit`: accepts the position and size of the target, returns true if the user has clicked and the mouse is over the target.
 - `draw_progress`: accepts parameters for the bar's location (x, y, width and height) and the percent fill. Use draw and fill rectangle to draw the progress bar to the screen at the location indicated.
-- `read_string`, `read_integer`, `read_integer_range`, and `read_boolean` to read and validate input from the user.
+- `read_string`, and `read_integer` to read and validate input from the user.
 
-:::
 </NoCopy>
 
 :::note[Useful SplashKit functions:]
