--- a/src/content/docs/book/part-2-organised-code/2-structuring-data/5-reference/03-02-enum.md
+++ b/src/content/docs/book/part-2-organised-code/2-structuring-data/5-reference/03-02-enum.md
@@ -59,6 +59,9 @@ In C/C++, you declare the enumeration using the **enum** keyword, and list the a
 
 :::
 
+![Annotated code of an enum](./images/enum-pano.png)
+<div class="caption">Annotated <code>genre_data</code> enum and example variables</div>
+
 ## Example
 
 ```cpp
