--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/5-reference/00-03-expressions-with-arrays.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/5-reference/00-03-expressions-with-arrays.mdx
@@ -145,6 +145,8 @@ How do we now change this from working with 3 values to work with 50, 100, 1000,
 
 Think about it. You now have the tools to work with large numbers of values, and it doesn't take you much more to code this than it takes to code the actions for one value. You just add a loop, and the computer does all the hard work repeating those steps over and over for all the values you give it.
 
+![Illustration of using for loop to access elements of the array](./images/array-iteration-pano.png)
+
 ## In C/C++
 
 :::tip[Syntax]
