--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/5-reference/00-05-array-params.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/5-reference/00-05-array-params.mdx
@@ -37,6 +37,8 @@ If you can, put your arrays in a struct in C/C++. Then you can avoid all the nas
 
 :::
 
+![Array parameters visualisation](./images/array-param-pano.png)
+
 ## Example
 
 The following sample code demonstrates passing arrays using the array syntax for the parameter.
