--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/05-02-design.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/05-02-design.mdx
@@ -5,6 +5,7 @@ sidebar:
 banner: 
   content: This is an optional tour - use it to extend your understanding.
 ---
+import { Accordion, AccordionItem } from 'accessible-astro-components'
 
 Before jumping into the code, we should think about the structure of our program and its data. Generally, I would start thinking about the data first, and then think through the functionality. Either way, you sort of have to keep both in mind. So as you think through the data, you think a little about how it will be processed. Similarly, as you think through the functionality, you think about the data and how it is structured.
 
@@ -179,3 +180,145 @@ color color_for_tile_kind(tile_kind kind)
 This should be enough to get a first iteration going. Build and run your version of this. Make sure to focus on the use of multiple loops when you interact with the array of tiles within the map.
 
 When you run this you should see... a green screen? The problem at the moment is that all the tiles are the same. So we cannot see the map grid yet. We can fix that next.
+
+<Accordion>
+  <AccordionItem header="Our implementation for reference">
+
+Here is our first iteration of the map explorer. Make sure to have a go at this yourself first, and only use this to help you if you get stuck.
+
+Key new aspects include looping through two-dimensional arrays. In this case we are looping through the tiles in the map when the map is initialised and when it is drawn.
+
+```cpp
+/*
+ * Program: Map Explorer
+ * A top-down map explorer.
+ */
+
+#include "splashkit.h"
+
+const int MAX_MAP_ROWS = 20;
+const int MAX_MAP_COLS = 20;
+
+const int TILE_WIDTH = 60;
+const int TILE_HEIGHT = 60;
+
+/**
+ * There are different kinds of tiles in the map.
+ * 
+ * @field WATER_TILE   A water tile
+ * @field GRASS_TILE   A grass tile
+ * @field DIRT_TILE    A dirt tile
+ * @field SAND_TILE    A sand tile
+ */
+enum tile_kind
+{
+  WATER_TILE,
+  GRASS_TILE,
+  DIRT_TILE,
+  SAND_TILE
+};
+
+/**
+ * A tile in the map.
+ * 
+ * @field kind  The kind of tile
+ */
+struct tile_data
+{
+  tile_kind kind;
+};
+
+/**
+ * A map containing a two dimensional array of tiles.
+ * 
+ * @field tiles   The tiles in the map
+ */
+struct map_data
+{
+  tile_data tiles[MAX_MAP_COLS][MAX_MAP_ROWS];
+};
+
+/**
+ * Initialise the map with all grass tiles.
+ * 
+ * @param map the map to initialise
+ */
+void init_map(map_data &map)
+{
+  for(int c = 0; c < MAX_MAP_COLS; c++)
+  {
+    for(int r = 0; r < MAX_MAP_ROWS; r++)
+    {
+      map.tiles[c][r].kind = GRASS_TILE;
+    }
+  }
+}
+
+/**
+ * Returns the color for the indicated tile kind.
+ * 
+ * @param kind the tile kind to get the color for
+ * @return color the color for the tile kind
+ */
+color color_for_tile_kind(tile_kind kind)
+{
+  // Return colors for each of the tile kinds
+  switch(kind)
+  {
+    case WATER_TILE: return color_blue();
+    case GRASS_TILE: return color_lawn_green();
+    case SAND_TILE: return color_blanched_almond();
+    case DIRT_TILE: return color_rosy_brown();
+    default: return  color_white();
+  }
+}
+
+/**
+ * Draw a tile at the indicated location.
+ * 
+ * @param tile the tile to draw, passed by constant reference
+ * @param x the x location of the top left of the tile
+ * @param y the y location of the top left of the tile
+ */
+void draw_tile(const tile_data &tile, double x, double y)
+{
+  color tile_color = color_for_tile_kind(tile.kind);
+  fill_rectangle(tile_color, x, y, TILE_WIDTH, TILE_HEIGHT);
+}
+
+/**
+ * Draw the tiles in the map to the screen.
+ * 
+ * @param map 
+ */
+void draw_map(const map_data &map)
+{
+  for(int c = 0; c < MAX_MAP_COLS; c++)
+  {
+    for(int r = 0; r < MAX_MAP_ROWS; r++)
+    {
+      draw_tile(map.tiles[c][r], c * TILE_WIDTH, r * TILE_HEIGHT);
+    }
+  }
+}
+
+int main()
+{
+  open_window("Map Explorer", 800, 600);
+
+  map_data map;
+  init_map(map);
+
+  while( ! quit_requested() )
+  {
+    clear_screen(color_white());
+    draw_map(map);
+    refresh_screen();
+
+    process_events();
+  }
+}
+```
+
+  </AccordionItem>
+</Accordion>
